# bbchallenge-deciders

decider-finite-automata-reduction/: Cargo.toml  README.md
decider-finite-automata-reduction/src/: main.rs
decider-finite-automata-reduction/src/core/: algebra.rs  dfa.rs  error.rs  limits.rs  machine.rs  mod.rs  nfa.rs  proof.rs
decider-finite-automata-reduction/src/driver/: node_crunch.rs  progress.rs
decider-finite-automata-reduction/src/io/: db.rs  dvf.rs  index.rs
decider-finite-automata-reduction/src/provers/: dfa_iterator.rs  direct.rs  mitm_dfa.rs  mod.rs  prover.rs
