[package]
name = "decider-finite-automata-reduction"
version = "0.2.0"
authors = ["Justin Blanchard <UncombedCoconut@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["fix_zero"]
# Decider direct-n only tries DFAs with a "sink" in the first SYMBOLS.pow(n.ilog(SYMBOLS)) states: big speedup, small false negative rate (raising the "n" needed to solve the TM).
sink_heuristic = []
# Deciders only search for automata that are insensitive to leading/trailing zeros. Disabling this allows for shorter proofs in some cases.
# Caution! The price is a severe speed penalty and incompatibility with .dvf-file verifiers designed for the original proof conditions.
fix_zero = []
# Double the bit-vector size to 128, allowing BB5 search depths up to 25.
u128 = []

[profile.release]
debug = 1
lto = "thin"

[dependencies]
argh = "0.1.10"
cat_solver = "0.1.0"
indicatif = "0.17.3"
itertools = "0.10.5"
node_crunch = { git = "https://github.com/willi-kappler/node_crunch" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["arbitrary_precision"] }
serde_with = "2.2.0"
thiserror = "1.0.38"
zerocopy = "0.6.1"
